// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders the UI snapshot correctly 1`] = `
<div
  className="css-v54qrt"
  id="basic-wrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-basic"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-basic-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="basic-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="searchbar-textinput-basic"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label="Search"
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-basic"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-basic"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="basic-helperText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 2`] = `
<div
  className="css-v54qrt"
  id="withSelect-wrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-withSelect"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1u8qly9"
      data-select={true}
      id="searchbar-select-withSelect-wrapper"
    >
      <div
        className="css-0"
      >
        <div
          className="chakra-select__wrapper css-42b2qy"
        >
          <select
            aria-label="Select a category"
            className="chakra-select css-1ik61og"
            disabled={false}
            id="searchbar-select-withSelect"
            name="selectName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value="Songs"
          >
            <option
              value="art"
            >
              Art
            </option>
            <option
              value="bushes"
            >
              Bushes
            </option>
            <option
              value="clothing"
            >
              Clothing
            </option>
            <option
              value="flowers"
            >
              Flowers
            </option>
            <option
              value="fossils"
            >
              Fossils
            </option>
            <option
              value="fruits"
            >
              Fruits
            </option>
            <option
              value="furniture"
            >
              Furniture
            </option>
            <option
              value="songs"
            >
              Songs
            </option>
            <option
              value="tools"
            >
              Tools
            </option>
            <option
              value="villagers"
            >
              Villagers
            </option>
          </select>
          <div
            className="chakra-select__icon-wrapper css-162mkon"
          >
            <svg
              aria-hidden={true}
              className="chakra-icon chakra-select__icon css-1nreziu"
              data-file-name="SvgArrow"
              focusable={false}
              id="searchbar-select-withSelect-icon"
              role="presentation"
              style={
                {
                  "color": "currentColor",
                  "height": "1em",
                  "width": "1em",
                }
              }
              title="arrow icon"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-z1r9u7"
        id="searchbar-textinput-withSelect-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="withSelect-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="searchbar-textinput-withSelect"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label=""
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-withSelect"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withSelect"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="withSelect-helperText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 3`] = `
<div
  className="css-v54qrt"
  id="withoutHelperText-wrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withoutHelperText"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-withoutHelperText-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="searchbar-textinput-withoutHelperText"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label="Search"
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-withoutHelperText"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withoutHelperText"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 4`] = `
<div
  className="css-v54qrt"
  id="withClearButton-wrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-withClearButton"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-withClearButton-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="withClearButton-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="searchbar-textinput-withClearButton"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label=""
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-withClearButton"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withClearButton"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="withClearButton-helperText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 5`] = `
<div
  className="css-v54qrt"
  id="invalidState-wrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-invalidState"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-invalidState-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="searchbar-textinput-invalidState-helperText"
            aria-invalid={true}
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="searchbar-textinput-invalidState"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
        <div
          aria-atomic={true}
          aria-live="polite"
          className="css-1xdhyk6"
          data-isinvalid={true}
          id="searchbar-textinput-invalidState-helperText"
        />
      </div>
      <button
        aria-label="Search"
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-invalidState"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-invalidState"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 6`] = `
<div
  className="css-v54qrt"
  id="disabledState-wrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-disabledState"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-disabledState-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={true}
            id="searchbar-textinput-disabledState"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label=""
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        disabled={true}
        id="searchbar-button-disabledState"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-disabledState"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 7`] = `
<div
  className="css-v54qrt"
  id="requiredState-wrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-requiredState"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-requiredState-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            aria-required={true}
            autoComplete={null}
            className="chakra-input css-0"
            disabled={true}
            id="searchbar-textinput-requiredState"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search (required)"
            required={true}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label="Search"
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        disabled={true}
        id="searchbar-button-requiredState"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-requiredState"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 8`] = `
<div
  className="css-v54qrt"
  id="noBrandButtonType-wrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-noBrandButtonType"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-noBrandButtonType-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            aria-required={true}
            autoComplete={null}
            className="chakra-input css-0"
            disabled={true}
            id="searchbar-textinput-noBrandButtonType"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search (required)"
            required={true}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label=""
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        disabled={true}
        id="searchbar-button-noBrandButtonType"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-noBrandButtonType"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 9`] = `
<div
  className="css-v54qrt"
  id="withHeading-wrapper"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="withHeading-heading"
  >
    A Heading
  </h2>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withHeading"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <button
        aria-label="Search"
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-withHeading"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withHeading"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 10`] = `
<div
  className="css-v54qrt"
  id="withDescription-wrapper"
>
  <p
    className="chakra-text css-1xdhyk6"
  >
    A description
  </p>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withDescription"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <button
        aria-label=""
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-withDescription"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withDescription"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 11`] = `
<div
  className="css-v54qrt"
  id="withHeadingAndDescription-wrapper"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="withHeadingAndDescription-heading"
  >
    A Heading
  </h2>
  <p
    className="chakra-text css-1xdhyk6"
  >
    A description
  </p>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withHeadingAndDescription"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <button
        aria-label="Search"
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-withHeadingAndDescription"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withHeadingAndDescription"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 12`] = `
<div
  className="css-v54qrt"
  id="chakra-wrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-kle7zy"
    id="searchbar-form-chakra"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-chakra-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="chakra-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="searchbar-textinput-chakra"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label=""
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-chakra"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-chakra"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="chakra-helperText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 13`] = `
<div
  className="css-v54qrt"
  data-testid="props"
  id="props-wrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-props"
    onSubmit={[MockFunction]}
    role="search"
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-g1fpd3"
        id="searchbar-textinput-props-wrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="props-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="searchbar-textinput-props"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        aria-label="Search"
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="searchbar-button-props"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-props"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="props-helperText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;
